--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    <div id="wrapper">
-      <header id="header"></header>
+    <header id="header">
+      <div class="green-line"></div>
       <div class="container">
-        <div class="phone"></div>
-        <div class="content"></div>
+        <nav>
+          <div class="logo">indipixel</div>
+          <ul>
+            <li><a>contact us</a></li>
+          </ul>
+        </nav>
       </div>
+    </header>
+    <div class="container">
+      <div class="phone"></div>
+      <div class="content"></div>
     </div>
     <footer id="footer">
-      <div class="copyright">&copy; 2015 Indipixel design</div>
-      <div class="contact"> <img src="images/Mail_icon.png">contact@yourmail.com</div>
+      <div class="copyright">&copy; 2015 Indipixel design </div>
+      <div class="contact"> <img src="images/Mail_icon.png">
+        <div class="email">contact@yourmail.com</div>
+      </div>
     </footer>
   </body>
 </html>
