--- a/index.html
+++ b/index.html
@@ -10,23 +10,50 @@
   <body>
     <header id="header">
       <div class="green-line"></div>
-      <div class="container">
-        <nav>
-          <div class="logo">indipixel</div>
-          <ul>
-            <li><a>contact us</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="positioner">
+        <div class="logo">
+          <h1>indipixel</h1>
+        </div>
+        <ul>
+          <li><a>contact us</a></li>
+        </ul>
+      </nav>
     </header>
-    <div class="container">
-      <div class="phone"></div>
-      <div class="content"></div>
-    </div>
+    <main>
+      <div class="red">
+        <div class="positioner container">
+          <div class="phone">
+            <div class="frame"><img src="images/phone_screen.png"></div>
+          </div>
+          <div class="content">
+            <div class="introduction">
+              <h2>we design and buils beautiful web &amp; mobile apps</h2>
+              <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
+              <button>Know more</button>
+            </div>
+          </div>
+        </div>
+        <div class="form">
+          <form>
+            <input type="text" name="firstname" placeholder="First Name">
+            <input type="text" name="lastname" placeholder="Last Name">
+            <input type="email" name="email" placeholder="Email Address">
+            <select name="design">
+              <option value="option1">App Design</option>
+              <option value="option2">Option 2</option>
+            </select>
+            <textarea name="message" rows="7" cols="50">Type your quety here</textarea>
+            <input type="submit" value="Send">
+          </form>
+        </div>
+      </div>
+    </main>
     <footer id="footer">
-      <div class="copyright">&copy; 2015 Indipixel design </div>
-      <div class="contact"> <img src="images/Mail_icon.png">
-        <div class="email">contact@yourmail.com</div>
+      <div class="footer positioner">
+        <div class="copyright">&copy; 2015 Indipixel design </div>
+        <div class="contact"> <img src="images/Mail_icon.png">
+          <div class="email">contact@yourmail.com</div>
+        </div>
       </div>
     </footer>
   </body>
