--- a/index.html
+++ b/index.html
@@ -20,31 +20,37 @@
       </nav>
     </header>
     <main>
-      <div class="red">
-        <div class="positioner container">
-          <div class="phone">
-            <div class="frame"><img src="images/phone_screen.png"></div>
-          </div>
-          <div class="content">
-            <div class="introduction">
-              <h2>we design and buils beautiful web &amp; mobile apps</h2>
-              <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
-              <button>Know more</button>
-            </div>
+      <div class="positioner container">
+        <div class="phone">
+          <div class="frame">
+            <div class="screen"></div>
           </div>
         </div>
-        <div class="form">
-          <form>
-            <input type="text" name="firstname" placeholder="First Name">
-            <input type="text" name="lastname" placeholder="Last Name">
-            <input type="email" name="email" placeholder="Email Address">
-            <select name="design">
-              <option value="option1">App Design</option>
-              <option value="option2">Option 2</option>
-            </select>
-            <textarea name="message" rows="7" cols="50">Type your quety here</textarea>
-            <input type="submit" value="Send">
-          </form>
+        <div class="content">
+          <div class="introduction">
+            <h2>we design and buils beautiful web &amp; mobile apps</h2>
+            <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
+            <button>Know more</button>
+          </div>
+          <div class="form">
+            <form>
+              <div class="input-section">
+                <input type="text" name="firstname" placeholder="First Name">
+                <input type="text" name="lastname" placeholder="Last Name">
+                <input type="email" name="email" placeholder="Email Address">
+                <select name="design">
+                  <option value="option1">App Design</option>
+                  <option value="option2">Option 2</option>
+                </select>
+              </div>
+              <div class="textarea">
+                <textarea name="message" rows="7" cols="80">Type your query here</textarea>
+              </div>
+              <div class="submit">
+                <input class="submit" type="submit" value="Send">
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </main>
