--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         </ul>
       </nav>
     </header>
+    <div class="red"></div>
+    <div class="darker-line"></div>
+    <div class="lighter-line"></div>
     <main>
-      <div class="positioner container">
+      <div class="container positioner">
         <div class="phone">
           <div class="frame">
             <div class="screen"></div>
@@ -28,23 +31,26 @@
         </div>
         <div class="content">
           <div class="introduction">
-            <h2>we design and buils beautiful web &amp; mobile apps</h2>
+            <h2>we design and build beautiful web &amp; mobile apps</h2>
             <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
             <button>Know more</button>
           </div>
           <div class="form">
             <form>
+              <div class="form-caption">Let's Talk</div>
               <div class="input-section">
                 <input type="text" name="firstname" placeholder="First Name">
                 <input type="text" name="lastname" placeholder="Last Name">
                 <input type="email" name="email" placeholder="Email Address">
-                <select name="design">
-                  <option value="option1">App Design</option>
-                  <option value="option2">Option 2</option>
-                </select>
+                <div class="select-style">
+                  <select name="design">
+                    <option value="option1">App Design</option>
+                    <option value="option2">Option 2</option>
+                  </select>
+                </div>
               </div>
               <div class="textarea">
-                <textarea name="message" rows="7" cols="80">Type your query here</textarea>
+                <textarea name="message" rows="3" cols="80">Type your query here</textarea>
               </div>
               <div class="submit">
                 <input class="submit" type="submit" value="Send">
@@ -57,7 +63,8 @@
     <footer id="footer">
       <div class="footer positioner">
         <div class="copyright">&copy; 2015 Indipixel design </div>
-        <div class="contact"> <img src="images/Mail_icon.png">
+        <div class="contact"> 
+          <div class="mail-icon"> </div>
           <div class="email">contact@yourmail.com</div>
         </div>
       </div>
