--- a/index.html
+++ b/index.html
@@ -19,44 +19,48 @@
         </ul>
       </nav>
     </header>
-    <div class="red"></div>
     <main>
-      <div class="container positioner">
-        <div class="phone">
-          <div class="frame">
-            <div class="screen"></div>
+      <div class="red">
+        <div class="positioner">
+          <div class="phone-top">
+            <div class="frame">
+              <div class="screen"></div>
+            </div>
+            <div class="darker-line"></div>
+            <div class="lighter-line"></div>
           </div>
-          <div class="darker-line"></div>
-          <div class="lighter-line"></div>
+          <div class="content">
+            <div class="introduction">
+              <h2>we design and build beautiful web &amp; mobile apps</h2>
+              <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
+              <button>Know more</button>
+            </div>
+          </div>
         </div>
-        <div class="content">
-          <div class="introduction">
-            <h2>we design and build beautiful web &amp; mobile apps</h2>
-            <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
-            <button>Know more</button>
-          </div>
-          <div class="form">
-            <form>
-              <div class="form-caption">Let's Talk</div>
-              <div class="input-section">
-                <input type="text" name="firstname" placeholder="First Name">
-                <input type="text" name="lastname" placeholder="Last Name">
-                <input type="email" name="email" placeholder="Email Address">
-                <div class="select-style">
-                  <select name="design">
-                    <option value="option1">App Design</option>
-                    <option value="option2">Option 2</option>
-                  </select>
-                </div>
+      </div>
+      <div class="form">
+        <div class="positioner">
+          <div class="phone-bottom"></div>
+          <form>
+            <div class="form-caption">Let's Talk</div>
+            <div class="input-section">
+              <input type="text" name="firstname" placeholder="First Name">
+              <input type="text" name="lastname" placeholder="Last Name">
+              <input type="email" name="email" placeholder="Email Address">
+              <div class="select-style">
+                <select name="design">
+                  <option value="option1">App Design</option>
+                  <option value="option2">Option 2</option>
+                </select>
               </div>
-              <div class="textarea">
-                <textarea name="message" rows="3" cols="80">Type your query here</textarea>
-              </div>
-              <div class="submit">
-                <input class="submit" type="submit" value="Send">
-              </div>
-            </form>
-          </div>
+            </div>
+            <div class="textarea">
+              <textarea name="message" rows="3" cols="80">Type your query here</textarea>
+            </div>
+            <div class="submit">
+              <input class="submit" type="submit" value="Send">
+            </div>
+          </form>
         </div>
       </div>
     </main>
