--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
             <div class="introduction">
               <h2>we design and build beautiful web &amp; mobile apps</h2>
               <p>You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney</p>
-              <button>Know more</button>
+              <div class="padding">
+                <button>Know more</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="form">
-        <div class="positioner">
+        <div class="positioner-bottom">
           <div class="phone-bottom"></div>
           <form>
             <div class="form-caption">Let's Talk</div>
@@ -47,12 +49,7 @@
               <input type="text" name="firstname" placeholder="First Name">
               <input type="text" name="lastname" placeholder="Last Name">
               <input type="email" name="email" placeholder="Email Address">
-              <div class="select-style">
-                <select name="design">
-                  <option value="option1">App Design</option>
-                  <option value="option2">Option 2</option>
-                </select>
-              </div>
+              <input type="text" name="design" placeholder="App Design">
             </div>
             <div class="textarea">
               <textarea name="message" rows="3" cols="80">Type your query here</textarea>
